# pathlist

./: README.md  coverage.sh  pyproject.py  pyproject.toml  setup.py
src/pathlist/: __init__.py  path.py
test/: test_countedlist.py  test_path.py
